# upn-epc-qr

./: .gitignore  README.md  _env  pyproject.toml
.github/workflows/: manual.yml
apps/core/: apps.py  middleware.py  models.py  receivers.py  utils.py  views.py
apps/core/api/: serializers.py  urls.py  viewsets.py
apps/core/management/commands/: startapp.py
apps/core/templates/: _base.html  custom_form_render.html  form_manual.html  main.html  nav.html  only_form.html  qr_error.html  qr_link.html  qr_not_found.html  qr_ok.html  qr_open.html  qr_show.html  robots.txt
apps/core/templates/include/: language.html  main_description.html
apps/core/urls/: __init__.py  v1.py
apps/qr/: admin.py  epc.py  forms.py  models.py  pdf_generator.py  services.py  upn.py  urls.py  views.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py  0002_user_full_name.py
conf/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
conf/include/: cache.py  common.py  db.py  installed_apps.py  logging.py  media.py  middleware.py  rest.py  sentry.py  templates.py
conf/locale/en/LC_MESSAGES/: django.po
conf/locale/ru/LC_MESSAGES/: django.po
conf/locale/sl/LC_MESSAGES/: django.po
