[tool.poetry]
name = "epc-qr-generator"
version = "0.1.0"
description = "EPC QR Generator"
authors = ["mamashin <mamashin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.0"
loguru = "^0.7.2"
python-decouple = "^3.5"
djangorestframework = "^3.13.1"
httpx = "^0.27.0"
sentry-sdk = "^1.43.0"
pillow = "^10.1.0"
django-behaviors = "^0.5.1"
django-ipware = "^6.0.3"
django-htmx = "^1.17.2"
pydantic = "^2.6.4"
result = "^0.16.1"
segno = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
